# lidarseg

./: .gitignore  Makefile  README.md  env.sh
configs/: cylinder3d_seq00.py  cylinder3d_seq00_weighted.py
docs/: 01_data_and_sensor.md  01_dataset_preparation.md  02_model_and_training.md  03_class_weighting.md  03_weighting_and_evaluation.md  04_evaluation_miou.md  05_lidar_to_camera_projection.md  06_make_gif_from_video.md  07_sensor_geometry.md  08_how_distance_works.md
scripts/: compute_class_weights.py  dataset_overview.py  evaluate.py  evaluate.sh  project_to_camera.py  resume.sh  sensor_geometry.py  split_seq00.py  train.py  train.sh  visualize.py
sim/src/kitti_seg_sim/: package.xml  setup.cfg  setup.py
sim/src/kitti_seg_sim/config/: kitti_seg.rviz
sim/src/kitti_seg_sim/kitti_seg_sim/: calib.py  colormap.py  inference.py  player_node.py  pointcloud.py  projection.py
sim/src/kitti_seg_sim/launch/: sim.launch.py
